k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website001
  labels:
    app: website001
spec:
  replicas: 3
  selector:
    matchLabels:
      app: website001
  template:
    metadata:
      labels:
        app: website001
    spec:
      containers:
      - name: web
        image: nginx
        ports:
        - containerPort: 80
