k8s/pod-multi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web02
spec:
  containers:
  - name: app
    image: nginx
    ports:
    - containerPort: 80
  - name: db
    image: redis
