k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web01
spec:
  containers:
  - name: app
    image: nginx
    ports:
    - containerPort: 80
