k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: website001-internal
spec:
  type: ClusterIP
  selector:
    app: website001
  ports:
    - port: 80
      targetPort: 80
