k8s/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: website001
spec:
  type: NodePort
  selector:
    app: website001
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30303
