k8s/ingress-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: username
  labels:
    app: username
spec:
  replicas: 1
  selector:
    matchLabels:
      app: username
  template:
    metadata:
      labels:
        app: username
    spec:
      containers:
      - name: web
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: username
spec:
  type: ClusterIP
  selector:
    app: username
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-username
spec:
  rules:
  - host: a1de81a94f6184a68a5b4c572b44dbeb-1f8388d56e3c7df0.elb.us-west-1.amazonaws.com
    http:
      paths:
      - path: /username
        pathType: Prefix
        backend:
          service:
            name: username
            port:
              number: 8080
  ingressClassName: nginx
